tests/baselines/reference/augmentedTypesModules4.errors.txt
augmentedTypesModules4.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules4.ts(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules4.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules4.ts(12,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules4.ts(15,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules4.ts(20,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules4.ts(21,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== augmentedTypesModules4.ts (7 errors) ====
    // module then enum
    // should be errors
    module m4 { }
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    enum m4 { }
    
    module m4a { var y = 2; }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    enum m4a { One }
    
    module m4b { export var y = 2; }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    enum m4b { One }
    
    module m4c { interface I { foo(): void } }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    enum m4c { One }
    
    module m4d { class C { foo() { } } }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    enum m4d { One }
    
    //// module then module
    
    module m5 { export var y = 2; }
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    module m5 { export interface I { foo(): void } } // should already be reasonably well covered
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    